# tantivy-ext

./: Cargo.toml  LICENSE  README.md
ext-index-macro/: Cargo.toml
ext-index-macro/src/: lib.rs
index-macro/: Cargo.toml
index-macro/src/: lib.rs
src/: lib.rs  main.rs
src/entity/: entity_trait.rs  field.rs  mod.rs
src/entity/util/: date_converter.rs
src/index/: backend.rs  index.rs  index_builder.rs  index_trait.rs  mod.rs  recycling_index.rs  search_index.rs  writer_recycler.rs
src/index/ext/: ext_field.rs  ext_type.rs  ext_type_trait.rs
src/index/query/: builder.rs
src/index/schema/: ext_field.rs
src/util/: async_retry.rs  field_extractor.rs  mod.rs
tests/: .gitignore  Cargo.toml  main.rs
tests/TestIndex/: .managed.json  meta.json
tests/src/: main.rs
