[package]
name = "ext-index-macro"
version = "0.1.0"
edition = "2021"
authors = ["Grayson Rieger graysonr12@icloud.com"]
license = "MIT"
description = "macro for tantivy_ext crate"

[lib]
proc-macro = true

[dependencies]
tantivy = "0.22.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
